add js animation

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
       </div>
     </header>
     <main class="container">
-      <div class="map-box">
+      <div class="map-box content">
         <div class="map-item map-item__upper">
-          <div class="map-item__number">2</div>
-          <div class="text map-item__text map-item__text_upper">
+          <div class="map-item__number level-2">2</div>
+          <div class="text map-item__text map-item__text_upper level-1">
             Возможность получения звёзд за подписку на Doodabot
           </div>
         </div>
         <div class="map-item map-item__middle map-item__middle_upper">
           <div class="map-item-box">
             <div class="center">
-              <div class="map-item__number">1</div>
+              <div class="map-item__number level-2">1</div>
             </div>
-            <div class="text map-item__text">
+            <div class="text map-item__text level-1">
               Вся информация о компании упакована в одном месте, что заведомо
               облегчает работу новичку <br />
               и не только
@@ -49,30 +49,30 @@
           </div>
           <div class="map-item-box">
             <div class="center">
-              <div class="map-item__number">3</div>
+              <div class="map-item__number level-2">3</div>
             </div>
-            <div class="text map-item__text">
+            <div class="text map-item__text level-1">
               Получение пакета/услуги таргетированной <br />
               рекламы
             </div>
           </div>
         </div>
         <div class="logo-box">
-          <img src="img/logo.svg" alt="logo" class="logo" />
+          <img src="img/logo.svg" alt="logo" class="logo level-2" />
           <img src="img/back.png" alt="background" class="back" />
-          <img src="img/line2.svg" alt="line2" class="line line__2" />
-          <img src="img/line1.svg" alt="line1" class="line line__1" />
-          <img src="img/line3.svg" alt="line3" class="line line__3" />
-          <img src="img/line6.svg" alt="line6" class="line line__6" />
-          <img src="img/line4.svg" alt="line4" class="line line__4" />
-          <img src="img/line5.svg" alt="line5" class="line line__5" />
+          <img src="img/line2.svg" alt="line2" class="line line__2 level--1" />
+          <img src="img/line1.svg" alt="line1" class="line line__1 level--1" />
+          <img src="img/line3.svg" alt="line3" class="line line__3 level--1" />
+          <img src="img/line6.svg" alt="line6" class="line line__6 level--1" />
+          <img src="img/line4.svg" alt="line4" class="line line__4 level--1" />
+          <img src="img/line5.svg" alt="line5" class="line line__5 level--1" />
         </div>
         <div class="map-item map-item__middle map-item__middle_lower">
           <div class="map-item-box">
             <div class="center">
-              <div class="map-item__number">6</div>
+              <div class="map-item__number level-2">6</div>
             </div>
-            <div class="text map-item__text">
+            <div class="text map-item__text level-1">
               При выборе партнерского пакета, приоритет падает именно на пакет
               platinum, так как именно на нем даётся 2х месячный бесплатный
               пробный период работы Doodabot и получение максимального
@@ -81,16 +81,16 @@
           </div>
           <div class="map-item-box">
             <div class="center">
-              <div class="map-item__number">4</div>
+              <div class="map-item__number level-2">4</div>
             </div>
-            <div class="text map-item__text">
+            <div class="text map-item__text level-1">
               Действует реферальная программа до 21 уровня
             </div>
           </div>
         </div>
         <div class="map-item map-item__lower">
-          <div class="map-item__number">5</div>
-          <div class="text map-item__text">
+          <div class="map-item__number level-2">5</div>
+          <div class="text map-item__text level-1">
             Ваш список всегда внутри бота, вы можете делать по нему рассылки и
             коммуницировать со своей аудиторией
           </div>
@@ -194,5 +194,7 @@
         </div>
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
